--- a/CapstoneR/Data/Tolon, A_Capstone.Rmd
+++ b/CapstoneR/Data/Tolon, A_Capstone.Rmd
@@ -14,11 +14,20 @@ First, I installed all of the necessary packages and loaded them to my library. 
 
 ```{r, echo=FALSE, results='hide'}
 # installing/loading the latest installr package:
-#install.packages("installr"); library(installr) # install+load installr
+
+#install.packages("installr"); library(installr) # install+load 
+#install.packages("pacman"); library(pacman) #For loading many packages
+
+#Install the packages that will be used for this session
+#packages <- c("tidyverse", "labelled", "magrittr", "readxl", "writexl", "sas7bdat", "dplyr", "car", "VGAM", "odds.n.ends", "lmtest", "ResourceSelection")
+
+#install.packages(packages)
+
+#installr
 
 #updateR() # updating R.
 
-remove(list = ls())
+#remove(list = ls())
 
 #load packages
 library(tidyverse) #for ggplot2,tibble,tidyr,readr,purrr,dplyr,stringr,forcats
@@ -426,6 +435,17 @@ o	There are no overly influential values.
     So, the further a predicted value is from the actual value, the more an observation contributes to the LL
     If many values are far from their predictions, the LL will be large, large LL = bad model fit
 
+*Re-code Income and Education to factor level*
+```{r}
+class(jail_cc$Education)
+class(jail_cc$Income)
+
+jail_cc$Education <- as.factor(jail_cc$Education)
+jail_cc$Income <- as.factor(jail_cc$Income)
+```
+
+
+
 *Run the general linear model, without confounders included (unadjusted model)*
 ```{r}
 #General Logistic Regression------------------------------------------------------------------------------------------------
@@ -487,12 +507,13 @@ summary(j2) #significant predictors still include "ParentsAbusedAlcDrug", "Physi
 coef(j2)
 exp(coef(j2))
 exp(cbind(OR=coef(j2), confint(j2)))
+odds.n.ends(j2)
 
 #Significant predictors below:
   #ParentsAbusedAlcDrug OR = 1.51
   #PhysicalAbuse OR = 2.12
   #SexualAssault OR = 2.05
-  #Black2 OR = 0.64 (confused as to why this OR is below 1, as that does not make sense with the literature)
+  #Black2 OR = 0.64 
 ```
 
 *Check the Log Likelihood between adjusted and unadjusted model*
@@ -511,7 +532,7 @@ anova(p2, j2,test="Chisq") #adjusted model is statistically significantly better
 ```{r}
 odds.n.ends(j2)
 
-#The logistic regression model, including confounders is statistically significant. The model is more specific than it is sensitive. It correctly predicts a negative results (no mental illness) about 74% of the time and correctly predicts a positive results (mental illness) about 57% of the time. 
+#The logistic regression model, including confounders is statistically significant. The model is more specific than it is sensitive. It correctly predicts a negative results (no mental illness) about 74% of the time and correctly predicts a positive results (mental illness) about 56% of the time. 
 ```
 
 Perhaps try to create a balanced sample, so that I can improve sensitivity and specificity? Calculate the ROC to get the AUC to determine of well this model does at predicting? 
@@ -574,8 +595,8 @@ hoslem.test(jail_cc$mental_illness, fitted(new)) #This is non-significant, indic
 
 summary(new) #AdverseExp is a significant predictor 
 odds.n.ends(new) #OR = 1.56 and is significant
-#Sensitivity = 55%
-#Specificity = 71%
+#Sensitivity = 54%
+#Specificity = 72%
 ```
  
 *Partially adjusted -> Disability as only Exposure Model*
@@ -586,9 +607,11 @@ new2 <- glm(mental_illness ~ Disability + Income + Education + Black2, data = ja
 hoslem.test(jail_cc$mental_illness, fitted(new2)) #Non-significant p-value, showing acceptable fit
 
 summary(new2) #AdverseExp is still a significant predictor 
-odds.n.ends(new2) #OR = 5.92 and is significant
-#Sensitivity = 38%
-#Specificity = 90%
+odds.n.ends(new2) #OR Disability = 6.01 and is significant
+#Sensitivity = 42%
+#Specificity = 88%
+
+lmtest::lrtest(new,new2)
 ```
  
 *Fully Adjusted Model with both predictors*
@@ -599,9 +622,9 @@ new3 <- glm(mental_illness ~ AdverseExp + Disability + Income + Education + Blac
 hoslem.test(jail_cc$mental_illness, fitted(new3)) #Non-significant p-value, showing acceptable fit
 
 summary(new3) #AdverseExp is still a significant predictor; Disability is also significant and has a very large OR 
-odds.n.ends(new3) #Disability OR = 5.37; AE OR = 1.50
-#Sensitivity = 57%
-#Specificity = 79%
+odds.n.ends(new3) #Disability OR = 5.47; AE OR = 1.50
+#Sensitivity = 59%
+#Specificity = 78%
 ```
  
 *Adjusted Model with Disability and AdverseExp*
@@ -613,10 +636,10 @@ new4 <- glm(mental_illness ~ AdverseExp + Disability +
 #Check Hosmer Lemeshow to see if model fits as it should
 hoslem.test(jail_cc$mental_illness, fitted(new4)) #Non-significant p-value, showing acceptable fit
 
-summary(new4) #AdverseExp is still a significant predictor (OR=1.5); Disability is also significant (OR=5.37)
+summary(new4) #AdverseExp is still a significant predictor (OR=1.5); Disability is also significant (OR=5.47)
 odds.n.ends(new4) 
-#Sensitivity = 57%
-#Specificity = 79%
+#Sensitivity = 59%
+#Specificity = 78%
 ```
 
 *Adjusted Model with Disability and AdverseExp + interaction term*
@@ -626,13 +649,13 @@ new5 <- glm(mental_illness ~ AdverseExp + Disability + AdverseExp*Disability + I
 #Check Hosmer Lemeshow to see if model fits as it should
 hoslem.test(jail_cc$mental_illness, fitted(new5)) #Non-significant p-value, showing acceptable fit
 
-summary(new5) #AdverseExp is still a significant predictor (OR=1.58); Disability is also significant (OR=8.48)
+summary(new5) #AdverseExp is still a significant predictor (OR=1.58); Disability is also significant (OR=8.57==)
 odds.n.ends(new5) 
 #Sensitivity = 61%
-#Specificity = 76%
+#Specificity = 77%
 
-#Interaction term is significant OR = 0.77
-#Among those who have a disability, the probabiltiy of having a mental illness decreases by approximately 23% with every unit increase in adverse experiences reported 
+#Interaction term is significant OR = 0.78
+#Among those who have a disability, the probabiltiy of having a mental illness decreases by approximately 22% with every unit increase in adverse experiences reported 
 ```
 
 ```{r}
@@ -645,63 +668,63 @@ lmtest::lrtest(new4, new5)
 
 *Test: Just trying things out to try to visualize the interaction*
 ```{r}
-glm1 <- glm(mental_illness ~ AdverseExp*Disability, data = jail_cc2,
+#glm1 <- glm(mental_illness ~ AdverseExp*Disability, data = jail_cc2,
             family = "binomial")
-tidy(glm1) %>% kable()
+#tidy(glm1) %>% kable()
 
 #Create new variable that has the logits for each observation
-jail_cc2 %>% 
-  mutate(pred_logit = predict(glm1)) -> d
-d
+#jail_cc2 %>% 
+  #mutate(pred_logit = predict(glm1)) -> d
+#d
 
 #Visually look at logits 
-ggplot(d) +
-  aes(x = pred_logit, fill = as.factor(Disability)) +
-  geom_density(alpha = .5)
+#ggplot(d) +
+  #aes(x = pred_logit, fill = as.factor(Disability)) +
+  #geom_density(alpha = .5)
 
 #Plot the interaction on logit scale
-d %>% 
-  ggplot() +
-  aes(x = AdverseExp, y = pred_logit, color = as.factor(Disability)) +
-  geom_point() +
-  geom_line()
+#d %>% 
+  #ggplot() +
+  #aes(x = AdverseExp, y = pred_logit, color = as.factor(Disability)) +
+  #geom_point() +
+  #geom_line()
 
 #Linear model
-lm1 <- lm(mental_illness ~ AdverseExp*Disability, data = jail_cc2)
-tidy(lm1)
+#lm1 <- lm(mental_illness ~ AdverseExp*Disability, data = jail_cc2)
+#tidy(lm1)
 
 #Plot the above
-d %>% 
-  ggplot() +
-  aes(x = AdverseExp, y = as.factor(mental_illness), color = as.factor(Disability)) +
-  geom_point() +
-  geom_abline(mapping = aes(slope = 0.10719981, intercept = 0.20252951), color = "#F8766D") +
-  geom_abline(mapping = aes(slope = 0.46441729, intercept = 0.20252951), color = "#00BFC4")
+#d %>% 
+  #ggplot() +
+  #aes(x = AdverseExp, y = as.factor(mental_illness), color = as.factor(Disability)) +
+  #geom_point() +
+  #geom_abline(mapping = aes(slope = 0.10719981, intercept = 0.20252951), color = "#F8766D") +
+  #geom_abline(mapping = aes(slope = 0.46441729, intercept = 0.20252951), color = "#00BFC4")
 
 #Plot 2
- d %>% 
-  ggplot() +
-  aes(x = AdverseExp, y = mental_illness, color = as.factor(Disability)) +
-  geom_point() +
-  geom_smooth(method = "lm", se = FALSE)
+ #d %>% 
+  #ggplot() +
+  #aes(x = AdverseExp, y = mental_illness, color = as.factor(Disability)) +
+  #geom_point() +
+  #geom_smooth(method = "lm", se = FALSE)
  
  #Get survival probabilities 
- d %>% 
-  mutate(pred_prob = predict(glm1, type = "response")) -> d
+ #d %>% 
+  #mutate(pred_prob = predict(glm1, type = "response")) -> d
  
 #Look at plot
- ggplot(d) +
-  geom_density(aes(x = pred_prob, fill  = as.factor(Disability)), alpha = .5)
+ #ggplot(d) +
+  #geom_density(aes(x = pred_prob, fill  = as.factor(Disability)), alpha = .5)
 
 #Plot interaction effect
-  d %>% 
-  ggplot() +
-  aes(x = as.integer(AdverseExp), y = as.factor(mental_illness), color = as.factor(Disability)) +
-  geom_point() +
-  geom_smooth(method = "glm",
-              aes(x = AdverseExp, y= pred_prob),
-              method.args = list(family = "binomial"),
-              se = FALSE)
+  #d %>% 
+  #ggplot() +
+  #aes(x = as.integer(AdverseExp), y = as.factor(mental_illness), color = as.factor(Disability)) +
+  #geom_point() +
+  #geom_smooth(method = "glm",
+              #aes(x = AdverseExp, y= pred_prob),
+              #method.args = list(family = "binomial"),
+              #se = FALSE)
 ```
 
 
